--- a/.github/workflows/snowflake_deploy.yml
+++ b/.github/workflows/snowflake_deploy.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '.github/sql_script/snowflake_queries.sql'
+      - 'sql_uploads/**/*.sql'
+      - 'sql_uploads/**/*.txt'
 
 jobs:
   deploy:
@@ -19,7 +20,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install snowflake-connector-python
-    - name: Execute Snowflake Script
+    - name: Get changed files
+      id: changed-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: |
+          sql_uploads/**/*.sql
+          sql_uploads/**/*.txt
+    - name: Execute Snowflake Scripts
       env:
         SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
         SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
@@ -27,4 +35,7 @@ jobs:
         SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
         SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-      run: python .github/scripts/execute_snowflake_script.py
+      run: |
+        for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+          python .github/scripts/execute_snowflake_script.py "$file"
+        done
