--- a/.github/workflows/snowflake_deploy.yml
+++ b/.github/workflows/snowflake_deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'sql_uploads/**/*.sql'
-      - 'sql_uploads/**/*.txt'
+      - '.github/sqluploads/**/*.sql'
+      - '.github/sqluploads/**/*.txt'
 
 jobs:
   deploy:
@@ -25,8 +25,8 @@ jobs:
       uses: tj-actions/changed-files@v35
       with:
         files: |
-          sql_uploads/**/*.sql
-          sql_uploads/**/*.txt
+          .github/sqluploads/**/*.sql
+          .github/sqluploads/**/*.txt
     - name: Execute Snowflake Scripts
       env:
         SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
