--- a/.github/workflows/snowflake_deploy.yml
+++ b/.github/workflows/snowflake_deploy.yml
@@ -3,9 +3,6 @@ name: Snowflake Deploy
 on:
   push:
     branches: [ main ]
-    paths:
-      - '.github/sqluploads/**/*.sql'
-      - '.github/sqluploads/**/*.txt'
 
 jobs:
   deploy:
@@ -20,13 +17,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install snowflake-connector-python
-    - name: Get changed files
-      id: changed-files
-      uses: tj-actions/changed-files@v35
-      with:
-        files: |
-          .github/sqluploads/**/*.sql
-          .github/sqluploads/**/*.txt
     - name: Execute Snowflake Scripts
       env:
         SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
@@ -36,6 +26,9 @@ jobs:
         SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
       run: |
-        for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-          python .github/scripts/execute_snowflake_script.py "$file"
+        for file in .github/sqluploads/*.sql .github/sqluploads/*.txt; do
+          if [ -f "$file" ]; then
+            echo "Processing $file"
+            python .github/scripts/execute_snowflake_script.py "$file"
+          fi
         done
