--- a/.github/workflows/execute_sql_uploads.yml
+++ b/.github/workflows/execute_sql_uploads.yml
@@ -1,35 +1,35 @@
-name: Execute SQL Uploads
+# name: Execute SQL Uploads
 
-on:
-  push:
-    paths:
-      - '.github/sql_uploads/**'
+# on:
+#   push:
+#     paths:
+#       - '.github/sql_uploads/**'
 
-jobs:
-  execute_sql_uploads:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install snowflake-connector-python
-    - name: Execute SQL Uploads
-      env:
-        SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-        SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-        SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-        SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-        SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-        SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-      run: |
-        for file in .github/sql_uploads/*.sql .github/sql_uploads/*.txt; do
-          if [ -f "$file" ]; then
-            echo "Processing $file"
-            python .github/scripts/execute_snowflake_script.py "$file"
-          fi
-        done
+# jobs:
+#   execute_sql_uploads:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Use Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.x'
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install snowflake-connector-python
+#     - name: Execute SQL Uploads
+#       env:
+#         SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+#         SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+#         SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+#         SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+#         SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+#         SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+#       run: |
+#         for file in .github/sql_uploads/*.sql .github/sql_uploads/*.txt; do
+#           if [ -f "$file" ]; then
+#             echo "Processing $file"
+#             python .github/scripts/execute_snowflake_script.py "$file"
+#           fi
+#         done
