--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -40,5 +40,5 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             pull_number: context.issue.number,
-            reviewers: ['architect1', 'architect2'] // Replace with actual GitHub usernames
+            reviewers: ['Notyou1231'] 
           })
