--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -2,34 +2,44 @@ name: Add Reviewers for CREATE Statements
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
-
-permissions:
-  pull-requests: write
+    types: [opened, synchronize]
 
 jobs:
-  analyze:
+  add-reviewers:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # Fetch full history to ensure access to main branch
+
+    - name: Fetch Main Branch
+      run: |
+        git fetch origin main # Fetch main branch explicitly
 
     - name: Detect CREATE Statements
       id: check_create
       run: |
+        # Identify changed SQL files
         CHANGED_FILES=$(git diff --name-only origin/main | grep -E '\.sql$' || true)
         echo "Changed SQL files: $CHANGED_FILES"
 
+        # Check for CREATE statements
+        create_found=false
         for file in $CHANGED_FILES; do
           if grep -qi 'create' "$file"; then
             echo "CREATE statement found in $file"
-            echo "create_found=true" >> $GITHUB_ENV
+            create_found=true
+            break
           fi
         done
 
+        echo "create_found=$create_found" >> $GITHUB_ENV
+
     - name: Add Reviewers
       if: env.create_found == 'true'
-      run: |
-        curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -d '{"reviewers":["Notyou1231"]}' \
-          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }}/requested_reviewers"
+      uses: peter-evans/add-reviewers@v3
+      with:
+        reviewers: |
+          Notyou1231
