--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -13,7 +13,7 @@ permissions:
   issues: write
 
 jobs:
-  assign_reviewer:
+  review_sql_scripts:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,38 +27,36 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Debug PR Information
+      - name: Install dependencies
         run: |
-          echo "Repository: ${{ github.repository }}"
-          echo "Base Branch: ${{ github.base_ref }}"
-          echo "Head Branch: ${{ github.head_ref }}"
-          echo "Base SHA: ${{ github.event.pull_request.base.sha }}"
-          echo "Head SHA: ${{ github.event.pull_request.head.sha }}"
-          echo "Pull Request Number: ${{ github.event.pull_request.number }}"
+          python -m pip install --upgrade pip
 
-      - name: Check for CREATE statements in SQL scripts
+      - name: Check for CREATE statements in SQL files
         id: check_sql_changes
         run: |
           # Use explicit base and head SHAs for diffing
           CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '\.github/sql_script/.*\.(sql|txt)$' || true)
-          
+
           echo "Changed SQL files: $CHANGED_FILES"
           
           if [ -n "$CHANGED_FILES" ]; then
-            CREATE_SCRIPT_FOUND=false
+            CREATE_STATEMENT_FOUND=false
             
             for file in $CHANGED_FILES; do
               if [ -f "$file" ]; then
-                # Check for 'CREATE' statement
-                if grep -iq "CREATE" "$file"; then
-                  CREATE_SCRIPT_FOUND=true
+                echo "Analyzing file: $file"
+
+                # Remove comments and check for CREATE statements
+                SQL_CONTENT=$(grep -vE '^\s*(--|/\*|.*\*/)' "$file")
+                if echo "$SQL_CONTENT" | grep -iq "CREATE"; then
+                  CREATE_STATEMENT_FOUND=true
                   echo "CREATE statement found in $file"
                   break
                 fi
               fi
             done
             
-            if [ "$CREATE_SCRIPT_FOUND" = true ]; then
+            if [ "$CREATE_STATEMENT_FOUND" = true ]; then
               echo "create_script=true" >> "$GITHUB_ENV"
             else
               echo "create_script=false" >> "$GITHUB_ENV"
@@ -66,18 +64,10 @@ jobs:
           else
             echo "No SQL files were changed in this pull request"
             echo "create_script=false" >> "$GITHUB_ENV"
-          fi
 
-      - name: Assign reviewer
-        if: env.create_script == 'true'
+      - name: Log message
         run: |
-          echo "Assigning reviewer for CREATE scripts..."
-          # Assign reviewer using GitHub CLI
-          gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231 || true
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Notify if no reviewer is needed
-        if: env.create_script != 'true'
-        run: |
-          echo "No CREATE statement found. No reviewer will be assigned."
+          if [ "$create_script" = "true" ]; then
+            echo "CREATE statement detected. Reviewer required: notyou1231"
+          else
+            echo "No CREATE statement found. No reviewer required."
