--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Log message and assign reviewer
         run: |
           if [ "$create_script" = "true" ]; then
-            echo "✅ CREATE statement detected. Reviewer required: notyou1231"
+            echo "✅ CREATE statement detected. Reviewer required: Notyou1231"
           else
             echo "ℹ️ No CREATE statement found. No reviewer required."
           fi
