--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -1,48 +1,38 @@
 name: Review SQL Scripts
-
 on:
   pull_request:
     branches:
       - main
     paths:
       - '.github/sql_script/**'
-
 permissions:
   contents: read
   pull-requests: write
   issues: write
-
 jobs:
   review_sql_scripts:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch full history for accurate diffing
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-
       - name: Check for CREATE statements in SQL files
         id: check_sql_changes
         run: |
           # Use explicit base and head SHAs for diffing
           CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '\.github/sql_script/.*\.(sql|txt)$' || true)
-
           echo "Changed SQL files: $CHANGED_FILES"
-
           # Initialize environment variable for script evaluation
           CREATE_STATEMENT_FOUND=false
-
           if [ -n "$CHANGED_FILES" ]; then
             for file in $CHANGED_FILES; do
               if [ -f "$file" ]; then
                 echo "Analyzing file: $file"
-
                 # Remove single-line and multiline comments, then check for CREATE statements
                 SQL_CONTENT=$(sed -E '/^\s*--/d' "$file" | sed -E ':a;N;$!ba;s/\s*\/\*.*?\*\///g')
                 if echo "$SQL_CONTENT" | grep -iq "CREATE"; then
@@ -53,14 +43,25 @@ jobs:
               fi
             done
           fi
-
           # Set the appropriate environment variable
           if [ "$CREATE_STATEMENT_FOUND" = true ]; then
             echo "create_script=true" >> "$GITHUB_ENV"
           else
             echo "create_script=false" >> "$GITHUB_ENV"
           fi
-
+      - name: Require approval if reviewer added
+        if: env.create_script == 'true'
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.pulls.createReview({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              event: 'REQUEST_CHANGES',
+              body: 'Reviewer required due to the presence of a CREATE statement.'
+            })
       - name: Log message and assign reviewer
         run: |
           if [ "$create_script" = "true" ]; then
